--- a/Insurance/WebContent/views/pages/registration.html
+++ b/Insurance/WebContent/views/pages/registration.html
@@ -13,23 +13,23 @@
 	                            	<label>Name</label>
 	                            	<span style="color:red" ng-show="myForm.name.$dirty && myForm.name.$invalid">
   									<span ng-show="myForm.name.$error.required">Name is Required.</span></span>
-  									<span ng-model-options="{ debounce: 250 }" style="color:red" ng-show="myForm.name.$error.minlength">Name Must be Atleast 2 Characters Long</span>
-	     							<input class="form-control" placeholder="Name" name="name" type="text" ng-model="name" autofocus required ng-minlength="2">
+  									<span style="color:red" ng-show="myForm.name.$error.minlength">Name Must be Atleast 2 Characters Long</span>
+	     							<input class="form-control" placeholder="Name" name="name" type="text" ng-model="name" autofocus required ng-minlength="2" ng-model-options="{ updateOn: 'blur' }">
 	                                <label>E-Mail</label>
 	                                <span style="color:red" ng-show="myForm.email.$dirty && myForm.email.$invalid">
   									<span ng-show="myForm.email.$error.required">Email is Required.</span></span>
-  									<span ng-model-options="{ debounce: 250 }" style="color:red" ng-show="myForm.email.$error.minlength">Email Must be Atleast 6 Characters Long</span>
-	                                <input class="form-control" placeholder="E-mail" name="email" type="email" ng-model="email" required ng-minlength="6">
+  									<span style="color:red" ng-show="myForm.email.$error.minlength">Email Must be Atleast 6 Characters Long</span>
+	                                <input class="form-control" placeholder="E-mail" name="email" type="email" ng-model="email" required ng-minlength="6" ng-model-options="{ updateOn: 'blur' }">
 	                                <label>Password</label>
 	                                <span style="color:red" ng-show="myForm.password.$dirty && myForm.password.$invalid">
   									<span ng-show="myForm.password.$error.required">Password is Required.</span></span>
-  									<span ng-model-options="{ debounce: 250 }" style="color:red" ng-show="myForm.password.$error.minlength">Password Must be Atleast 6 Characters Long</span>
-	                                <input class="form-control" placeholder="Password" name="password" type="password" ng-model="password" required ng-minlength="6">
+  									<span style="color:red" ng-show="myForm.password.$error.minlength">Password Must be Atleast 6 Characters Long</span>
+	                                <input class="form-control" placeholder="Password" name="password" type="password" ng-model="password" required ng-minlength="6" ng-model-options="{ updateOn: 'blur' }">
 	                                <label>Confirm Password</label>
 	                                <span style="color:red" ng-show="myForm.cpassword.$dirty && myForm.cpassword.$invalid">
   									<span ng-show="myForm.cpassword.$error.required">Password Confirmation is Required.</span>
   									<span style="color:red" ng-show="myForm.cpassword.$invalid">Passwords Must Match</span></span>
-	                                <input class="form-control" placeholder="Confirm Password" name="cpassword" type="password" ng-model="cpassword" confirm-pass="cpassword != password ? 'Passwords don\'t match' : ''" required>
+	                                <input class="form-control" placeholder="Confirm Password" name="cpassword" type="password" ng-model="cpassword" confirm-pass="cpassword != password ? 'Passwords don\'t match' : ''" required ng-model-options="{ updateOn: 'blur' }">
 <!-- 	                                <label>Mobile Number</label> -->
 <!-- 	                                <span style="color:red" ng-show="myForm.mobile.$dirty && myForm.mobile.$invalid"> -->
 <!--   									<span ng-show="myForm.mobile.$error.required">Mobile Number is Required.</span></span> -->
