--- a/Insurance/WebContent/views/dashboard/manager.html
+++ b/Insurance/WebContent/views/dashboard/manager.html
@@ -1,11 +1,16 @@
 <div>
-    <div class="row">
-        <div class="col-lg-12">
-            <h1 class="page-header">Manager Dashboard</h1>
-        </div>
-    </div>
+  <div class="row">
+      <div class="col-lg-12">
+          <h1 class="page-header">Manager Dashboard</h1>
+      </div>
+  </div>
 	<div class="row">
-    	<stats number=placeholder comments="View Applications" colour="primary" type="user"></stats>
-    	<stats number=placeholder comments="Customers" colour="primary" type="user"></stats>
-    </div>
+   	<stats number=placeholder comments="View Applications" colour="primary" type="user"></stats>
+   	<stats number=placeholder comments="Customers" colour="primary" type="user"></stats>
+  </div>
+  <div>
+	  <p>This is a paragraph</p>
+  </div>
+   
 </div>
+
