--- a/Insurance/WebContent/views/pages/login.html
+++ b/Insurance/WebContent/views/pages/login.html
@@ -16,7 +16,7 @@
                             </div>
                             <div class="checkbox">
                                 <label>
-                                    <input name="remember" type="checkbox" value="Remember Me">Remember Me
+                                    <input name="remember" type="checkbox" value="Remember Me?">Remember Me
                                 </label>
                             </div>
                             <!-- Change this to a button or input when using this as a form -->
