--- a/Insurance/WebContent/views/pages/registration.html
+++ b/Insurance/WebContent/views/pages/registration.html
@@ -9,58 +9,49 @@
                         <form role="form" novalidate name="myForm" ng-submit="submitInfo();">
                             <fieldset>
                             	<div class="form-group">
-                            	
 	                            	<label>Name</label>
 	                            	<span style="color:red" ng-show="myForm.name.$dirty && myForm.name.$invalid">
   									<span ng-show="myForm.name.$error.required">Name is Required.</span></span>
-  									<span style="color:red" ng-show="myForm.name.$error.minlength">Name Must be Atleast 2 Characters Long</span>
-	     							<input class="form-control" placeholder="Name" name="name" type="text" ng-model="name" autofocus required ng-minlength="2" ng-model-options="{ updateOn: 'blur' }">
+  									<span ng-model-options="{ debounce: 250 }" style="color:red" ng-show="myForm.name.$error.minlength">Name must be at least 2 characters long</span>
+	     							<input class="form-control" placeholder="Name" name="name" type="text" ng-model="name" autofocus required ng-minlength="2">
 	                                <label>E-Mail</label>
 	                                <span style="color:red" ng-show="myForm.email.$dirty && myForm.email.$invalid">
   									<span ng-show="myForm.email.$error.required">Email is Required.</span></span>
-  									<span style="color:red" ng-show="myForm.email.$error.minlength">Email Must be Atleast 6 Characters Long</span>
-	                                <input class="form-control" placeholder="E-mail" name="email" type="email" ng-model="email" required ng-minlength="6" ng-model-options="{ updateOn: 'blur' }">
-	                                <label>Password</label>
-	                                <span style="color:red" ng-show="myForm.password.$dirty && myForm.password.$invalid">
-  									<span ng-show="myForm.password.$error.required">Password is Required.</span></span>
-  									<span style="color:red" ng-show="myForm.password.$error.minlength">Password Must be Atleast 6 Characters Long</span>
-	                                <input class="form-control" placeholder="Password" name="password" type="password" ng-model="password" required ng-minlength="6" ng-model-options="{ updateOn: 'blur' }">
-	                                <label>Confirm Password</label>
-	                                <span style="color:red" ng-show="myForm.cpassword.$dirty && myForm.cpassword.$invalid">
-  									<span ng-show="myForm.cpassword.$error.required">Password Confirmation is Required.</span>
-  									<span style="color:red" ng-show="myForm.cpassword.$invalid">Passwords Must Match</span></span>
-	                                <input class="form-control" placeholder="Confirm Password" name="cpassword" type="password" ng-model="cpassword" confirm-pass="cpassword != password ? 'Passwords don\'t match' : ''" required ng-model-options="{ updateOn: 'blur' }">
-<!-- 	                                <label>Mobile Number</label> -->
-<!-- 	                                <span style="color:red" ng-show="myForm.mobile.$dirty && myForm.mobile.$invalid"> -->
-<!--   									<span ng-show="myForm.mobile.$error.required">Mobile Number is Required.</span></span> -->
-<!-- 	                                <input class="form-control" placeholder="Mobile" name="mobile" type="tel" ng-model="mobile" required> -->
-<!-- 	                                <label>Address</label> -->
-<!-- 	                                <span style="color:red" ng-show="myForm.address.$dirty && myForm.address.$invalid"> -->
-<!--   									<span ng-show="myForm.address.$error.required">Address is Required.</span></span>	 -->
-<!-- 	                                <input class="form-control" placeholder="Address" name="address" type="text" value="" ng-model="address" required> -->
-<!-- 	                                <label>Social Security Number</label> -->
-<!-- 	                               	<span style="color:red" ng-show="myForm.ssb.$dirty && myForm.ssn.$invalid"> -->
-<!--   									<span ng-show="myForm.ssn.$error.required">Social Security Number is Required.</span></span> -->
-<!-- 	                                <input class="form-control" placeholder="SSN" name="ssn" type="text" ng-model="ssn" required> -->
-<!-- 	                                <label>Date of Birth</label> -->
-<!-- 	                                <span style="color:red" ng-show="myForm.dob.$dirty && myForm.dob.$invalid"> -->
-<!--   									<span ng-show="myForm.dob.$error.required">Date of Birth is Required.</span></span> -->
-<!-- 	                                <input class="form-control" placeholder="DOB" name="dob" type="date" ng-model="dob" required> -->
-<!-- 	                                <label>Occupation</label> -->
-<!--                                     <span style="color:red" ng-show="myForm.occupation.$dirty && myForm.occupation.$invalid"> -->
-<!--   									<span ng-show="myForm.occupation.$error.required">Father's Name is Required.</span></span> -->
-<!-- 	                                <input class="form-control" placeholder="Occupation" name="occupation" type="text" ng-model="occupation" required> -->
-<!-- 	                                <label>Salary</label> -->
-<!-- 	                                <span style="color:red" ng-show="myForm.salary.$dirty && myForm.salary.$invalid"> -->
-<!--   									<span ng-show="myForm.salary.$error.required">Salary is Required.</span></span> -->
-<!-- 									<input class="form-control" placeholder="Salary" name="salary" type="text" ng-model="salary" required> -->
-<!-- 	                                <label>Education</label> -->
-<!-- 	                                <span style="color:red" ng-show="myForm.education.$dirty && myForm.education.$invalid"> -->
-<!--   									<span ng-show="myForm.education.$error.required">Education is Required.</span></span> -->
-<!-- 									<input class="form-control" placeholder="Education" name="education" type="text" ng-model="education" required> -->
+  									<span ng-model-options="{ debounce: 250 }" style="color:red" ng-show="myForm.email.$error.minlength">Email must be at least 6 characters long</span>
+	                                <input class="form-control" placeholder="E-mail" name="email" type="email" ng-model="email" required ng-minlength="6">
+	                                <label>Mobile Number</label>
+	                                <span style="color:red" ng-show="myForm.mobile.$dirty && myForm.mobile.$invalid">
+  									<span ng-show="myForm.mobile.$error.required">Mobile Number is Required.</span></span>
+	                                <input class="form-control" placeholder="Mobile" name="mobile" type="tel" ng-model="mobile" required>
+	                                <label>Address</label>
+	                                <span style="color:red" ng-show="myForm.address.$dirty && myForm.address.$invalid">
+  									<span ng-show="myForm.address.$error.required">Address is Required.</span></span>	
+	                                <input class="form-control" placeholder="Address" name="address" type="text" value="" ng-model="address" required>
+	                                <label>Social Security Number</label>
+	                               	<span style="color:red" ng-show="myForm.ssb.$dirty && myForm.ssn.$invalid">
+  									<span ng-show="myForm.ssn.$error.required">Social Security Number is Required.</span></span>
+	                                <input class="form-control" placeholder="SSN" name="ssn" type="text" ng-model="ssn" required>
+	                                <label>Date of Birth</label>
+	                                <span style="color:red" ng-show="myForm.dob.$dirty && myForm.dob.$invalid">
+  									<span ng-show="myForm.dob.$error.required">Date of Birth is Required.</span></span>
+	                                <input class="form-control" placeholder="DOB" name="dob" type="date" ng-model="dob" required>
+	                                <label>Occupation</label>
+                                    <span style="color:red" ng-show="myForm.occupation.$dirty && myForm.occupation.$invalid">
+  									<span ng-show="myForm.occupation.$error.required">Father's Name is Required.</span></span>
+	                                <input class="form-control" placeholder="Occupation" name="occupation" type="text" ng-model="occupation" required>
+	                                <label>Salary</label>
+	                                <span style="color:red" ng-show="myForm.salary.$dirty && myForm.salary.$invalid">
+  									<span ng-show="myForm.salary.$error.required">Salary is Required.</span></span>
+									<input class="form-control" placeholder="Salary" name="salary" type="text" ng-model="salary" required>
+	                                <label>Education</label>
+	                                <span style="color:red" ng-show="myForm.education.$dirty && myForm.education.$invalid">
+  									<span ng-show="myForm.education.$error.required">Education is Required.</span></span>
+									<input class="form-control" placeholder="Education" name="education" type="text" ng-model="education" required>
                                 </div>
-                                <input type="submit" class="btn btn-lg btn-success btn-block" value="Submit Registration "ng-disabled="myForm.email.$pristine && myForm.email.$invalid 
-                                || myForm.name.$pristine && myForm.name.$invalid || myForm.password.$pristine && myForm.password.$invalid || myForm.cpassword.$pristine && myForm.cpassword.$invalid"> 
+                                <input type="submit" class="btn btn-lg btn-success btn-block" value="Submit Registration "ng-disabled="myForm.email.$dirty && myForm.email.$invalid 
+                                || myForm.name.$dirty && myForm.name.$invalid || myForm.ssn.$dirty && myForm.ssn.$invalid || myForm.salary.$dirty && myForm.salary.$invalid
+                                || myForm.address.$dirty && myForm.address.$invalid || myForm.dob.$dirty && myForm.dob.$invalid || myForm.occupation.$dirty && myForm.occupation.$invalid
+                                || myForm.education.$dirty && myForm.education.$invalid ||  myForm.mobile.$dirty && myForm.mobile.$invalid" > 
                             </fieldset>
                         </form>
                     </div>
